# electrical_demand_forecast

./: .env  .gitignore  README.md  demand.ipynb
data/: holidays.csv  regions.json  stations.csv  temp_forecast_stations.csv  temp_historical_stations.csv
images/: aws.drawio
scripts/: .dockerignore  Dockerfile  Dockerfile_dashboard  Dockerfile_database_api  docker-compose.yaml  pyproject.toml
scripts/dags/: config.py  dags.py  tasks.py
scripts/electrical_demand/: dags_functions.py  logger.py
scripts/electrical_demand/api/: api.py
scripts/electrical_demand/dashboard/: config.py  main.py  utils.py
scripts/electrical_demand/database/: client.py  models.py
scripts/electrical_demand/database_api/: api.py  config.py
scripts/electrical_demand/database_api/api_queries/: regions.sql  total.sql
scripts/electrical_demand/migrations/: env.py
scripts/electrical_demand/ml/: demand_forecast.py
scripts/electrical_demand/process_data/: getters.py  loaders.py  utils.py
terraform/: airflow.tf  data.tf  database.tf  docker.tf  network.tf  output.tf  store.tf  variables.tf
